add some sections

--- a/assets/styles/one-page-css.css
+++ b/assets/styles/one-page-css.css
@@ -1,3 +1,6 @@
+html{
+    scroll-behavior: smooth;
+}
 body{
     margin: 0;
     padding: 0; 
@@ -218,24 +221,43 @@ header{
     align-items: center;
     justify-content: space-between;
     gap: 30px;
-    z-index: 9;
+    z-index: 4;
 }
- 
-.tab-content{
+ .tabs-content{
+    width: calc(100% - 670px);  
+ } 
+ .tab-content{
     display: none;
-}
+    width: 100%;
+    height: 620px;
+    padding: 56px;
+    border-radius: 30px;
+    position: relative;
+    background: #FFCC02;
+    z-index: 9;
+ }
+ .tab-content h2{
+    font-size: 22px;
+    font-weight: bold;
+    color: #000;
+    line-height: 1.3;
+ }
+ .tab-content .text{
+    font-size: 22px;
+    font-weight: 400;
+    color: #000;
+    line-height: 1.3;
+    margin-top: 25px;
+ }
 
+ .relative-container{
+    position: relative;
+    height: 644px;
+    width: 616px; 
+ }
  
-
-.grid-container { 
-        display: grid;
-        grid-template-columns: repeat(632, 1px); /* Divide 632px into 2px segments */
-        grid-template-rows: repeat(616, 1px); /* Divide 616px into 2px segments */
-        width: 616px;
-        height: 632px; 
-  }
-  .item{
-    background: blue;
+.item{
+    background: #fff;
     border-radius: 80px;
     display: flex;
     align-items: center;
@@ -243,6 +265,7 @@ header{
     position: relative;
     overflow: hidden;
     cursor: pointer;
+    position: absolute;
   }
  .item .text{
     position: absolute;
@@ -259,71 +282,180 @@ header{
     opacity: 0;
     transition: 0.2s;
     background: #FFCC02;
+    text-align: center;
+    overflow: hidden;
+    padding: 5px;
  }
  .item:hover .text{
     opacity: 1;
  }
-  .item1{
-    grid-column-start: 1;
-    grid-column-end: 209;
-    grid-row-start: 12;
-    grid-row-end: 196; 
-  }
-  .item1 img{
-    width: 116px;
-    height: 78px;
-  }
-  .item2{
-    grid-column-start: 241;
-    grid-column-end: 375;
-    grid-row-start: 1;
-    grid-row-end: 201; 
-  }   
-  .item3{
-    grid-column-start: 407;
-    grid-column-end: 607;
-    grid-row-start: 1;
-    grid-row-end: 225; 
-  } 
-  .item4{
-    grid-column-start: 56;
-    grid-column-end: 208;
-    grid-row-start: 228;
-    grid-row-end: 360; 
-  }
-  .item5{
-    grid-column-start: 240;
-    grid-column-end: 424;
-    grid-row-start: 233;
-    grid-row-end: 433; 
-  }
-  .item6{
-    grid-column-start: 456;
-    grid-column-end: 588;
-    grid-row-start: 254;
-    grid-row-end: 454; 
-  }
-  .item7{
-    grid-column-start: 2;
-    grid-column-end: 186;
-    grid-row-start: 392;
-    grid-row-end: 618; 
-  }
-  .item8{
-    grid-column-start: 218;
-    grid-column-end: 370;
-    grid-row-start: 463;
-    grid-row-end: 595; 
-  }
-  .item9{
-    grid-column-start: 402;
-    grid-column-end: 602;
-    grid-row-start: 485;
-    grid-row-end: 617; 
-  }
-  
-   
-  
-  
- 
- 
+ .item:nth-child(1){
+    width: 208px;
+    height: 184px;  
+    top: 12px;
+    left: 0;
+ }
+ .item:nth-child(1) img{
+    max-width: 116px;
+    max-height: 78px;
+ }
+ .item:nth-child(2){
+    width: 132px;
+    height: 200px;  
+    top: 0;
+    left: 240px;
+ }
+ .item:nth-child(2) img{
+    max-width: 94px;
+    max-height: 91px;
+ }
+ .item:nth-child(3){
+    width: 200px;
+    height: 224px;  
+    top: 0;
+    left: 404px;
+ }
+ .item:nth-child(3) img{
+    max-width: 76px;
+    max-height: 125px;
+ }
+ .item:nth-child(4){
+    width: 152px;
+    height: 132px;  
+    top: 228px;
+    left: 36px;
+ }
+ .item:nth-child(4) img{
+    max-width: 85px;
+    max-height: 85px;
+ }
+ .item:nth-child(5){
+    width: 184px;
+    height: 200px;  
+    top: 232px;
+    left: 220px;
+ }
+ .item:nth-child(5) img{
+    max-width: 114px;
+    max-height: 82px;
+ }
+ .item:nth-child(6){
+    width: 132px;
+    height: 200px;  
+    top: 256px;
+    left: 436px;
+ }
+ .item:nth-child(6) img{
+    max-width: 95px;
+    max-height: 95px;
+ }
+ .item:nth-child(7){
+    width: 184px;
+    height: 240px;  
+    top: 396px;
+    left: 15px;
+ }
+ .item:nth-child(7) img{
+    max-width: 95px;
+    max-height: 95px;
+ }
+ .item:nth-child(8){
+    width: 152px;
+    height: 132px;  
+    top: 464px;
+    left: 232px;
+ }
+ .item:nth-child(8) img{
+    max-width: 95px;
+    max-height: 95px;
+ }
+ .item:nth-child(9){
+    width: 200px;
+    height: 132px;  
+    top: 488px;
+    left: 416px;
+ }
+ .item:nth-child(9) img{
+    max-width: 95px;
+    max-height: 95px;
+ }
+
+.about-section{
+    min-height: 888px;
+    width: 100%;
+    position: relative;
+    padding-top: 308px;
+    padding-bottom: 50px;
+}
+.backgorund-image-about{
+    width: 100%;
+    height: 888px;
+    position: absolute;
+    top: 0;
+    left: 0; 
+    z-index: -1;
+}
+.backgorund-image-about img{
+    width: 100%;
+    height: 100%;
+}
+.about-us-box{
+    width: 100%;
+    padding: 56px;
+    display: flex;
+    gap: 56px;
+    justify-content: space-between;
+    align-items: flex-start;
+    border-radius: 32px;
+    background: #3296E1;
+}
+.about-us-image{
+    width: 544px;
+    height: 536px;
+    border-radius: 32px;
+    overflow: hidden;
+}
+.about-us-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.about-text-box{
+    width: calc((100% - 600px)); 
+}
+.about-text-box h1{
+    font-size: 72px;
+    color: #fff;
+    line-height: 1.3;
+    font-weight: bold;
+}
+.about-text-box .text{
+    font-weight: 400;
+    color: #fff;
+    font-size: 22px;
+    line-height: 1.5;
+    margin-top: 30px;
+}
+.reels-section{
+    padding: 50px 0;
+    width: 100%;
+}
+.reels-title{
+    margin-bottom: 40px;
+}
+.reels-title h1{
+    font-size: 72px;
+    color: #000;
+    font-weight: 700;
+}
+.reels-item{ 
+    height: 472px!important; 
+    overflow: hidden;
+    padding: 0 12px;
+}
+.reels-item img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 32px;
+}
