--- a/assets/styles/one-page-css.css
+++ b/assets/styles/one-page-css.css
@@ -452,10 +452,87 @@ header{
     height: 472px!important; 
     overflow: hidden;
     padding: 0 12px;
-}
+    transition: 0.2s;
+} 
 .reels-item img{
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 32px;
 }
+
+.articles-section{
+    padding: 50px 0;
+    overflow-x: hidden;
+}
+.articles-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.articles-container h1{
+    font-size: 72px;
+    font-weight: bold;
+    color: #000; 
+}
+.article-text{
+    font-size: 22px;
+    line-height: 1.4;
+    font-weight: 400;
+    color: #000;
+    margin: 50px 0;
+}
+.articles-slider{
+    width: 130%;
+}
+.articles-item{ 
+    height: 356px!important;
+    margin-right: 24px;
+    border-radius: 32px;
+    overflow: hidden;
+    padding: 24px;
+    background: #FFCC02;
+    transition: 0.2s; 
+}
+.articles-item:hover{
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+}
+.articles-item a span svg{
+    transition: 0.2s;
+}
+.articles-item:hover a span svg{
+    transform: translateX(10px); 
+}
+.articles-item a{
+    width: 100%;
+    height: 100%;
+    display: block;
+    text-decoration: none;
+}
+.articles-item a h2{
+    font-size: 22px;
+    color: #000;
+    font-weight: bold;
+    line-height: 1.3;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    overflow: hidden;
+}
+.articles-item a .text{
+    font-size: 16px;
+    color: #000;
+    font-weight: 400;
+    line-height: 1.5;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 8;
+    overflow: hidden;
+    margin-top: 24px;
+    margin-bottom: 28px;
+} 
+.articles-slider{
+    height: 376px;
+    overflow: hidden;
+}
+ 
