--- a/assets/styles/one-page-responsive.css
+++ b/assets/styles/one-page-responsive.css
@@ -3,3 +3,24 @@
         max-width: 1240px;
     }
 }
+
+/* @media only screen and (max-width: 700px) {
+    .container{
+      display: flex;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+    }
+    .col-big {
+      display: flex;
+      flex-wrap: nowrap;
+      width: auto;
+  }
+    .col-small{
+      display: flex;
+      flex-wrap: nowrap;
+      flex-direction: initial;
+    }
+    .col-row-hide{
+      display:none;
+    }
+    } */
