--- a/assets/styles/one-page-responsive.css
+++ b/assets/styles/one-page-responsive.css
@@ -1,21 +1,862 @@
-@media(max-width: 1600px){
-    .handle-container-small{
-        max-width: 1240px;
-    }
+@media (max-width: 1600px) {
+  .handle-container-big {
+    max-width: 1390px;
+  }
+  .handle-container-small {
+    max-width: 1300px;
+  }
+  .rec-text .title {
+    font-size: 60px;
+    line-height: 1.2;
+    max-width: 590px;
+  }
+  .about-section {
+    margin-top: -1px;
+  }
+  .video-box {
+    width: 1030px;
+  }
+  .iframe-video {
+    width: 1030px;
+    height: 576px;
+  }
+  .video-box h1 {
+    margin-bottom: 24px;
+  }
+  .video-box .text {
+    margin-bottom: 48px;
+  }
+  .get-involved {
+    gap: 50px;
+  }
+  .involved-tabs {
+    width: 488px;
+  }
+  .get-involved form {
+    width: 584px;
+    gap: 30px 24px;
+  }
+  .input-b-ox {
+    width: calc((100% / 2) - 12px);
+  }
+  .gallery-text-side h1 {
+    max-width: 43%;
+  }
+  .gallery-text-side {
+    gap: 40px;
+  }
+  .col-row-01 {
+    width: 100%;
+  }
 }
 
-/* @media only screen and (max-width: 700px) {
-    .container{
+@media (max-width: 1280px) {
+  .handle-container-big {
+    max-width: 1050px;
+    padding: 0 20px;
+  }
+  .handle-container-small {
+    max-width: 1000px;
+    padding: 0 20px;
+  }
+  .recomendation-section { 
+    padding-top: 80px; 
+}
+.relative-container {
+  position: relative;
+  height: 516px;
+  width: 452px;
+}
+.item:nth-child(1) {
+  width: 139px;
+  height: 150px;
+  top: 12px;
+  left: 0;
+}
+.item:nth-child(1) img {
+  max-width: 96px;
+  max-height: 75px;
+}
+.item:nth-child(2) {
+  width: 122px;
+  height: 165px;
+  top: 0;
+  left: 159px;
+}
+.item:nth-child(2) img {
+  max-width: 86px;
+  max-height: 87px;
+}
+.item:nth-child(3) {
+  width: 144px;
+  height: 187px;
+  top: 0;
+  left: 304px;
+}
+.item:nth-child(3) img {
+  max-width: 72px;
+  max-height: 115px;
+}
+.item:nth-child(4) {
+  width: 152px;
+  height: 132px;
+  top: 180px;
+  left: 11px;
+}
+.item:nth-child(4) img {
+  max-width: 85px;
+  max-height: 85px;
+}
+.item:nth-child(5) {
+  width: 144px;
+  height: 175px;
+  top: 187px;
+  left: 181px;
+}
+.item:nth-child(5) img {
+  max-width: 100px;
+  max-height: 82px;
+}
+.item:nth-child(6) {
+  width: 102px;
+  height: 162px;
+  top: 207px;
+  left: 342px;
+}
+.item:nth-child(6) img {
+  max-width: 89px;
+  max-height: 92px;
+}
+.item:nth-child(7) {
+  width: 136px;
+  height: 157px;
+  top: 331px;
+  left: 15px;
+}
+.item:nth-child(7) img {
+  max-width: 95px;
+  max-height: 95px;
+}
+.item:nth-child(8) {
+  width: 136px;
+  height: 132px;
+  top: 379px;
+  left: 170px;
+}
+.item:nth-child(8) img {
+  max-width: 95px;
+  max-height: 95px;
+}
+.item:nth-child(9) {
+  width: 128px;
+  height: 117px;
+  top: 387px;
+  left: 320px;
+}
+.item:nth-child(9) img {
+  max-width: 89px;
+  max-height: 83px;
+}
+.relative-rec{
+  height: 520px;
+}
+.lines-background-img { 
+  height: 450px; 
+  right: 22px;
+  top: 25px;  
+}
+.rec-text .title {
+  font-size: 45px;
+  line-height: 1.2;
+  max-width: 490px;
+}
+.back-button{
+  font-size: 14px;
+}
+.nav-menu ul li a{
+  font-size: 14px;
+}
+.lang-box ul li a{
+  font-size: 14px;
+}
+.tabs-content {
+  width: calc(100% - 490px);
+}
+.tab-content{
+  height: 510px;
+}
+.tab-content .text{
+  font-size: 16px;
+}
+.about-us-box{
+  flex-direction: column; 
+  align-items: center;
+  justify-content: initial;
+  gap: 40px;
+}
+.about-text-box{
+  width: 100%;
+}
+.about-text-box h1 {
+  font-size: 50px; 
+}
+.backgorund-image-about {
+  width: 100%;
+  height: 450px;
+}
+.about-section{
+  padding-top: 160px;
+  padding-bottom: 40px;
+}
+.reels-section{
+  padding: 40px 0;
+}
+.reels-title{
+  margin-bottom: 30px;
+}
+.reels-title h1 {
+  font-size: 50px; 
+}
+.reels-item {
+  height: 400px !important; 
+}
+.articles-section{
+  padding: 40px 0;
+}
+.articles-container h1 {
+  font-size: 50px; 
+}
+.article-text {
+  font-size: 20px; 
+  margin: 35px 0;
+}
+.articles-item a h2{
+  font-size: 20px;
+}
+.video-box {
+  width: 870px;
+}
+.iframe-video {
+  width: 870px;
+  height: 480px;
+}
+.video-box .text {
+  margin-bottom: 30px;
+  font-size: 20px;
+}
+.video-box h1 {
+  font-size: 50px;
+}
+.video-container::before { 
+  height: 630px; 
+}
+.quotes-section { 
+  padding: 40px 0; 
+}
+.quotes-text h1 {
+  font-size: 50px;  
+  margin-bottom: 35px;
+}
+.quotes-text .text {
+  font-size: 20px; 
+  width: 457px;
+}
+.quotes-slider{
+  height: 410px;
+}
+.quotes-item { 
+  height: 410px !important; 
+  padding: 30px;
+  padding-top: 40px;  
+}
+.quotes-item .text {
+  margin-top: 16px;
+  font-size: 20px; 
+  line-height: 1.4; 
+  -webkit-line-clamp: 8; 
+}
+.quote-svg span svg{
+  height: 70px;
+}
+.involved-section{
+  padding-top: 40px;
+  padding-bottom: 150px;
+}
+.tab-c-item h2{
+  font-size: 50px;
+}
+.tab-c-item .text{
+  font-size: 20px;
+  -webkit-line-clamp: 7;
+}
+.get-involved{
+  padding: 36px;
+  gap: 36px;
+}
+.get-involved form {
+  width: 480px;
+  gap: 24px 15px;
+}
+.input-b-ox label {
+  font-size: 16px;
+  line-height: 1.2; 
+}
+.textarea-input textarea { 
+  height: 124px;
+}
+.input-b-ox input { 
+  height: 46px; 
+  font-size: 16px;
+  padding-left: 0 10px;
+}
+.gallery-section {
+  padding: 80px 0;
+  padding-top: 20px;
+}
+.gallery-text-side{
+  margin-bottom: 50px;
+}
+.gallery-text-side h1{
+  font-size: 50px;
+}
+.gallery-text-side .text{
+  font-size: 20px;
+  max-width: 46%;
+}
+.gallery-box-image{
+  gap: 25px;
+}
+.col-big-01{
+  gap: 25px;
+}
+.col-small-01{
+  gap: 25px;
+}
+.gallery-text-side{
+  font-size: 30px;
+}
+.one-page-footer { 
+  padding: 40px 0; 
+}
+.bottom-footer {
+  margin-top: 40px; 
+}
+}
+@media (max-width: 991px) {
+  .handle-container-big, .handle-container-small{
+    max-width: 720px;
+  }
+.nav-menu, .lang-search-box{
+  display: none;
+}
+.burger-icon{
+  display: flex;
+}
+.burger-icon .close-burger-icon{
+  display: none;
+}
+.burger-menu{
+  display: none;
+}
+.lines-background-img{
+  display: none;
+} 
+.relative-rec {
+  display: flex;
+  flex-direction: column-reverse;
+  align-items: initial;
+  height: auto;
+  gap: 30px;
+}
+.rec-text {
+  height: 300px;
+}
+.rec-text .title {
+  font-size: 40px;
+  line-height: 1.5;
+  max-width: 100%;
+}
+.absolute-tab-rec{
+  position: initial;
+  display: initial;
+}
+.tabs-content{
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+}
+.tab-content {
+  min-height: 300px;
+  height: auto;
+  padding: 30px;
+}
+.relative-container{
+  margin: 0 auto;
+}
+.item .text{
+  font-size: 12px;
+}
+.about-us-image {
+  width: 491px;
+  height: 390px;  
+}
+.about-text-box h1, .reels-title h1, .articles-container h1, .video-box h1, .gallery-text-side h1 { 
+  font-size: 40px;
+}
+.articles-item {
+  width: 312px !important;
+}
+.articles-item a h2 {
+  font-size: 18px;
+}
+.video-box .text {
+  margin-bottom: 30px;
+  font-size: 18px;
+}
+.video-box {
+  width: 600px;
+}
+.iframe-video {
+  width: 600px;
+  height: 335px;
+}
+.video-container::before {
+  height: 454px;
+}
+.quotes-flex{
+  flex-direction: column;
+  gap: 30px;
+}
+.quotes-text {
+  width: 100%;
+}
+.quotes-text .text { 
+  width: 100%;
+}
+.quotes-slider {
+  width: 115%; 
+  margin-left: 0;
+}
+.quotes-item {
+  width: 312px !important;
+}
+.get-involved {
+  padding: 30px;
+  gap: 40px;
+  flex-direction: column;
+}
+.involved-tabs {
+  width: 100%;
+}
+.get-involved form{
+  width: 100%;
+}
+.yellowborder { 
+  top: -70px; 
+}
+.gallery-text-side{
+  flex-direction: column;
+  align-items: initial;
+}
+.gallery-text-side h1{
+  max-width: 100%;
+}
+.gallery-text-side .text{
+  max-width: 100%;
+}
+.gallery-box-image{
+  flex-direction: column;
+}
+.follow-container{
+  flex-wrap: wrap;
+}
+.follow-container h1 {
+  max-width: 100%; 
+  font-size: 32px; 
+}
+.footer-links-info {
+  width: calc((100% / 3) - 20px); 
+}
+.top-footer { 
+  flex-wrap: wrap; 
+}
+.t-header{
+  flex-wrap: wrap;
+}
+}
+@media (max-width: 767px){
+  .handle-container-big, .handle-container-small{
+    max-width: 580px;
+  }
+  .t-header {
+    flex-wrap: wrap;
+    gap: 16px;
+    justify-content: center;
+}
+.video-box {
+  width: 500px;
+}
+.about-us-image {
+  width: 423px;
+  height: 349px;
+}
+.about-us-box { 
+  padding: 30px;
+}
+.iframe-video {
+  width: 500px;
+  height: 335px;
+}
+.footer-links-info {
+  width: calc((100% / 2) - 20px);
+}
+.about-section{
+  min-height: 500px;
+}
+.quotes-text h1, .tab-c-item h2 { 
+  font-size: 40px; 
+}
+}
+
+
+@media (max-width: 575px){
+  .handle-container-big, .handle-container-small{
+    max-width: 100%;
+    padding: 0 24px;
+  }
+  .t-header{
+    padding: 14px 0;
+  }
+
+  .back-button {
+    font-size: 16px;
+}
+.soc-links-header { 
+  gap: 16px;
+}
+.soc-links-header a {
+  width: 32px;
+  height: 32px; 
+}
+.soc-links-header a svg{
+  max-height: 16px;
+  max-width: 16px;
+}
+.recomendation-section {
+  padding-top: 56px;
+}
+.rec-text .title {
+  font-size: 28px; 
+}
+.rec-text {
+  height: 245px;
+  gap: 40px;
+}
+.tab-content {
+  min-height: 245px;
+  height: auto;
+  padding: 24px;
+}
+.tab-content .text{
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 7;
+  overflow: hidden;
+  margin-top: 10px;
+}
+.about-us-box {
+  padding: 24px;
+  gap: 24px;
+}
+.about-us-image {
+  width: 264px;
+  height: 230px;
+}
+.backgorund-image-about {
+  width: 100%;
+  height: 250px;
+}
+.about-section {
+  padding-top: 85px;
+  padding-bottom: 20px;
+  min-height: 400px;
+}
+.about-text-box h1, .reels-title h1, .articles-container h1, .video-box h1, .gallery-text-side h1, .tab-c-item h2 { 
+  font-size: 36px;
+}
+.about-text-box .text { 
+  font-size: 16px;
+  line-height: 1.4;
+  margin-top: 20px;
+}
+  .video-box {
+    width: 90%;
+}
+.iframe-video {
+  width: 100%;
+  height: 335px;
+}
+.yellowborder { 
+  height: 70px;
+}
+.reels-section {
+  padding: 20px 0;
+}
+.reels-title {
+  margin-bottom: 24px;
+}
+.reels-item {
+  height: 472px !important;
+}
+.articles-section {
+  padding: 20px 0;
+}
+.article-text {
+  font-size: 16px;
+  margin: 24px 0;
+}
+.articles-item a h2 {
+  font-size: 22px;
+  -webkit-line-clamp: 3;
+}
+.articles-slider{
+  height: 408px;
+}
+.articles-item {
+  width: 312px !important;
+  height: 408px !important;
+  margin-right: 10px;
+}
+.video-section {
+  padding: 20px 0;
+}
+.video-container { 
+  padding-top: 24px; 
+}
+.video-box {
+  width: 100%;
+  padding: 0 24px;
+}
+.video-box .text { 
+  font-size: 16px;
+}
+.iframe-video { 
+  height: 160px;
+}
+.video-container::before {
+  height: 290px;
+}
+.quotes-section {
+  padding: 20px 0;
+}
+.quotes-text h1 {
+  font-size: 36px;
+  margin-bottom: 24px;
+}
+.quotes-text .text {
+  font-size: 16px; 
+}
+.quotes-slider {
+  height: 472px;
+}
+.quotes-item {
+  height: 472px !important;
+  padding: 30px;
+  padding-top: 40px;
+  margin-right: 10px;
+}
+.quotes-item .text { 
+  font-size: 22px;
+}
+.get-involved {
+  padding: 24x; 
+}
+.tab-c-item .text {
+  font-size: 16px;
+  -webkit-line-clamp: 20;
+}
+.input-b-ox {
+  width: 100%;
+  gap: 8px;
+}
+.textarea-input textarea {
+  height: 202px;
+}
+.involved-section { 
+  padding-bottom: 100px;
+}
+
+.gallery-section {
+  padding: 40px 0;
+  padding-top: 0px; 
+}
+.gallery-text-side {
+  gap: 24px;
+  margin-bottom: 24px;
+} 
+.gallery-text-side .text {
+  font-size: 16px; 
+}
+.gallery-box-image{
+  display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    width: 500px;
+    padding-right: 200px;
+    flex-direction: initial;
+}
+.col-big-01 {
+  gap: 10px;
+  flex-direction: initial;
+  flex-wrap: nowrap;
+  width: auto;
+}
+.col-small-01 {
+  gap: 10px; 
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: initial;
+}
+.col-row-01 {
+  min-width: initial;
+}
+.col-row-hide{
+  display: none;
+}
+.col-row-01 img{
+  width: auto;
+}
+.overflow-gallery{
+  overflow-x: hidden;
+}
+.follow-section { 
+  padding: 25px 0;
+}
+.follow-container h1 { 
+  font-size: 22px;
+}
+.follow-container { 
+  gap: 24px;
+}
+.one-page-footer {
+  padding: 24px 0;
+}
+.footer-links-info { 
+  width: 100%;
+  gap: 10px; 
+}
+.relative-container{
+  width: 325px;
+  height: 416px;
+}
+.item{
+  border-radius: 40px;
+}
+.item:nth-child(1) {
+  width: 96px;
+  height: 108px;
+  top: 20px;
+  left: 2px;
+}
+.item:nth-child(1) img {
+  max-width: 58px;
+  max-height: 40px;
+}
+.item:nth-child(2) {
+  width: 90px;
+  height: 144px;
+  top: 0;
+  left: 114px;
+}
+.item:nth-child(2) img {
+  max-width: 57px;
+  max-height: 57px;
+}
+.item:nth-child(3) {
+  width: 104px;
+  height: 112px;
+  top: 13px;
+  left: 220px;
+}
+.item:nth-child(3) img {
+  max-width: 40px;
+  max-height: 65px;
+}
+.item:nth-child(4) {
+  width: 84px;
+  height: 84px;
+  top: 144px;
+  left: 10px;
+}
+.item:nth-child(4) img {
+  max-width: 49px;
+  max-height: 49px;
+}
+.item:nth-child(5) {
+  width: 88px;
+  height: 104px;
+  top: 160px;
+  left: 110px;
+}
+.item:nth-child(5) img {
+  max-width: 60px;
+  max-height: 42px;
+}
+.item:nth-child(6) {
+  width: 88px;
+  height: 144px;
+  top: 141px;
+  left: 213px;
+}
+.item:nth-child(6) img {
+  max-width: 64px;
+  max-height: 87px;
+}
+.item:nth-child(7) {
+  width: 104px;
+  height: 144px;
+  top: 244px;
+  left: 0px;
+}
+.item:nth-child(7) img {
+  max-width: 60px;
+  max-height: 60px;
+}
+.item:nth-child(8) {
+  width: 84px;
+  height: 84px;
+  top: 279px;
+  left: 120px;
+}
+.item:nth-child(8) img {
+  max-width: 48px;
+  max-height: 48px;
+}
+.item:nth-child(9) {
+  width: 88px;
+  height: 112px;
+  top: 300px;
+  left: 217px;
+}
+.item:nth-child(9) img {
+  max-width: 65px;
+  max-height: 63px;
+}
+}
+
+/* @media (max-width: 768px) {
+    .gallery-box{
       display: flex;
       flex-wrap: nowrap;
       overflow-x: auto;
     }
-    .col-big {
+    .col-big-01 {
       display: flex;
       flex-wrap: nowrap;
       width: auto;
   }
-    .col-small{
+    .col-small-01{
       display: flex;
       flex-wrap: nowrap;
       flex-direction: initial;
